<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/moon_phases"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/moonImg"
        android:layout_width="407dp"
        android:layout_height="0dp"
        android:layout_marginTop="113dp"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/moonImgDesc"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/n26_8p" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/fullMoonsYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moonImg">


        <TextView
            android:id="@+id/todayPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/lastNewMoon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/lastNewMoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_new_moon"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/nextFullMoon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/nextFullMoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_full_moon"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/fullMoonsYear"
        android:layout_width="267dp"
        android:layout_height="69dp"
        android:layout_marginBottom="40dp"
        android:text="@string/full_moons_in_year"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>