<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/full_moons_in_year"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/year_val" />

    <Button
        android:id="@+id/yearMinus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/minus_one"
        app:layout_constraintEnd_toStartOf="@+id/yearPlus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <Button
        android:id="@+id/yearPlus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/plus_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yearMinus"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearMinus">

        <TextView
            android:id="@+id/fullMoonDate00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fullMoonDate01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fullMoonDate02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fullMoonDate03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fullMoonDate04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fullMoonDate05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fullMoonDate06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fullMoonDate07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fullMoonDate08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fullMoonDate09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fullMoonDate10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fullMoonDate11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>